--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=3000
+JWT_SECRET=FadilLodging_Secret241102
 MONGODB_URI="mongodb+srv://admin_lodging:4Dm1nLodging24@mern-lodging.ykuc0dy.mongodb.net/?retryWrites=true&w=majority"
